--- a/BLISInterfaceClient.ini
+++ b/BLISInterfaceClient.ini
@@ -58,9 +58,9 @@
 ;***************************************************
 [TCP/IP CONFIGURATIONS]
 	;Port on which to listen for data
-	PORT = 8080
+	PORT = 5150
 	;equipment IP address if applicable
-	EQUIPMENT_IP = 169.254.207.106
+	EQUIPMENT_IP = 169.254.186.182
 	;EQUIPMENT_IP = 169.254.81.142
 	;How should the application connect to analyser. options (server/client)
 	MODE = server
@@ -134,9 +134,9 @@ DELETE_AFTER_READ = yes
 	;BLIS_PASSWORD = equipment
 	
 	;Live server
-	BLIS_URL = http://blisgh/blisgh/
-	BLIS_USERNAME = 00621
-	BLIS_PASSWORD = GENEXPERT
+	BLIS_URL = http://10.33.6.99:4001/
+	BLIS_USERNAME = cape_admin
+	BLIS_PASSWORD = admin123
 	
 	
 ;*********************************************************************************************************************
@@ -200,7 +200,7 @@ DELETE_AFTER_READ = yes
 	;Supported Feed Source = TCP/IP
 	;1-way communication
 	
-	;Flexor Junior
+	Flexor Junior
 	;Supported Feed Source = TCP/IP
 	;1-way communication
 	
@@ -220,7 +220,7 @@ DELETE_AFTER_READ = yes
 	;Supported Feed Source = TCP/IP
 	;1-way communication
 	
-	SYSMEX XN-350
+	;SYSMEX XN-350
 	;Supported Feed Source = TCP/IP
 	;1-way communication	
 
